created tests route

--- a/app/views/subjects/show_subject.erb
+++ b/app/views/subjects/show_subject.erb
@@ -1,11 +1,6 @@
 <h1><%=@subject.name%></h1>
 
-<form class="" action="/tests/new" method="post">
-  Add a test <br><br>
-   <label>Name of test: <input type="text" name="name" value=""></label><br><br>
-   <label>Date of test:</label> <input type="text" name="date" value="">
-   <br><br><input type="submit"  value="Create Test">
-</form>
+<h3><a href="/tests/new">Create a Test</a></h3>
 
 <h3>List of tests</h3>
 
