added end to test.erb

--- a/app/views/tests/tests.erb
+++ b/app/views/tests/tests.erb
@@ -1,5 +1,6 @@
 <%@tests.each do |test| %>
   <p>
     <a href="/tests/<%=test.id%>"><%=test.name%></a><br>
-    <%=test.date%> 
+    <%=test.date%>
   </p>
+  <%end%>
