moved css file to public

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Record Keeper</title>
-    <link rel="stylesheet" href="./views/css/style.css">
+    <link rel="stylesheet" href="/views/css/style.css">
   </head>
   <body>
     <%= yield%>
