--- a/app/views/teachers/edit_teacher.erb
+++ b/app/views/teachers/edit_teacher.erb
@@ -14,9 +14,9 @@
    <input type="checkbox" name="subjects[subject_ids][]"  <%= 'checked' if @teacher.subjects.include?(subject) %>  value="<%=subject.id%>"><%=subject.name%></input>
   <%end%>
 
-  <h3>Students that you teach</h3>
-  <%@students.each do |student| %>
-  <input type="checkbox" <%= 'checked' if @teacher.students.include?(student)%> name="students[student_ids][]" value="<%=student.id%>"><%="#{student.first_name} #{student.last_name}"%></input>
-  <%end%><br><br>
+  <h3>Can't find your subject? Add one below:</h3>
+  Name of subject: <input type="text" name="new_subject[name]" value="">
+
+  <br><br>
   <input type="submit"  value="Update Profile">
 </form>
